# aster-server

./: #general.json  #memes.json  .env  .gitignore  Cargo.toml  README.md  add-edited.sql  add-password.sql  add-reply.sql  add-uname.sql  aster.db  cert.pem  channels.json  config.json  convert_uuid.py  identity.pfx  init.sql  init2.sql  key.pem  name.txt  protocol.md  test_websocket.py  todo  users.json
.cargo/: config.toml
2/: config.json
migrations/2021-03-13-134512_create_posts/: down.sql  up.sql
migrations/2021-05-09-142040_modify_groups/: up.sql
migrations/2022-01-30-112330_add_sync/: down.sql  up.sql
migrations/2022-02-01-222602_add_emoji/: down.sql  up.sql
src/: attachments.rs  files.rs  helper.rs  main.rs  message.rs  models.rs  new_row.rs  peer.rs  permissions.rs  schema.rs  serverproperties.rs  shared.rs  sharedchannel.rs  sync.rs
src/commands/: auth.rs  log_any.rs  log_in.rs  log_out.rs  mod.rs  send_message.rs
