[package]
name = "server"
version = "1.0.0"
authors = ["Jachdich <jamesedkitching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-tungstenite = "*"
tokio-native-tls = "*"
native-tls = "0.2.11"

# tracing = "0.1"
# tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
rand = "*"
base64 = "*"
diesel = { version = "*", features = ["sqlite", "numeric"]}
chrono = "*"
lazy_static = "*"
sodiumoxide = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum_dispatch = "0.3.8"
serde_repr = "0.1.12"
log = "0.4.18"
env_logger = "0.10.0"
anyhow = "1.0.71"
