[package]
name = "server"
version = "1.0.0"
authors = ["Jachdich <jamesedkitching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-tungstenite = "*"
tokio-native-tls = "*"
native-tls = "0.2.11"
bytes = "1.0.0"
rand = "*"
base64 = "*"
chrono = "*"
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "*"
enum_dispatch = "0.3.8"
log = "0.4.18"
env_logger = "0.10.0"
anyhow = "1.0.71"
rusqlite = "0.32.1"
futures = "0.3.31"

[features]
notls = []
